// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndicator (unit tests) when rendering with \`active\` when the component loads should match the snapshot 1`] = `
<kv-step-indicator active="">
  <template shadowrootmode="open">
    <div class="indicator indicator--state-active">
      <kv-icon name="kv-success"></kv-icon>
    </div>
  </template>
</kv-step-indicator>
`;

exports[`StepIndicator (unit tests) when rendering with \`hasError\` when the component loads should match the snapshot 1`] = `
<kv-step-indicator has-error="">
  <template shadowrootmode="open">
    <div class="indicator indicator--state-error"></div>
  </template>
</kv-step-indicator>
`;

exports[`StepIndicator (unit tests) when rendering with default props when the component loads should match the snapshot 1`] = `
<kv-step-indicator>
  <template shadowrootmode="open">
    <div class="indicator"></div>
  </template>
</kv-step-indicator>
`;
